# galaxy_server

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_8txt.html  Doxyfile  LICENSE.md  LICENSE_8md.html  README.md  README_8md.html  annotated.html  annotated_dup.js  benchmark_release.sh  build.sh  callgrind.out.9248  classDot.html  classDot.js  classDot__coll__graph.map  classField.html  classField__coll__graph.map  classField__coll__graph.md5  classGalaxy-members.html  classGalaxy.html  classGalaxy.js  classGalaxy__coll__graph.map  classGalaxy__coll__graph.md5  classGalaxy__inherit__graph.map  classGalaxy__inherit__graph.md5  classGalaxy_a06c64a89d3bd684797c725c8419c10ca_cgraph.map  classGalaxy_a06c64a89d3bd684797c725c8419c10ca_cgraph.md5  classGalaxy_a06c64a89d3bd684797c725c8419c10ca_icgraph.map  classGalaxy_a06c64a89d3bd684797c725c8419c10ca_icgraph.md5  classGalaxy_a0b74cf01c87755dac2f6b545f0871530_icgraph.map  classGalaxy_a0b74cf01c87755dac2f6b545f0871530_icgraph.md5  classGalaxy_a13dbcec35a2b7615acb153d7ca33bce3_icgraph.map  classGalaxy_a13dbcec35a2b7615acb153d7ca33bce3_icgraph.md5  classGalaxy_a2e2b85249f4321c2e365e6800cea2a7f_icgraph.map  classGalaxy_a2e2b85249f4321c2e365e6800cea2a7f_icgraph.md5  classGalaxy_a4a3100bfbe43c0ac7243decec3753a35_cgraph.map  classGalaxy_a4a3100bfbe43c0ac7243decec3753a35_cgraph.md5  (+296 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  docs.yml
.kdev4/: galaxy_server.kdev4
doc/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  CMakeCache_8txt.html  CMakeLists_8txt.html  TargetDirectories_8txt.html  annotated.html  annotated_dup.js  classDot-members.html  classDot.html  classDot__coll__graph.map  classDot__coll__graph.md5  classField-members.html  classField.html  (+286 more)
include/: debug_functions.hpp  dot.hpp  field.hpp  galaxy.hpp  gamechange.hpp  gamegen.hpp  gamestate.hpp  json_schemas.hpp  network.hpp  newgamepoll.hpp  player.hpp  position_type.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+56 more)
src/: dot.cpp  field.cpp  galaxy.cpp  gamechange.cpp  gamegen.cpp  gamestate.cpp  main.cpp  network.cpp  newgamepoll.cpp  player.cpp
test/: CMakeLists.txt  game_change-test.cpp  test-test.cpp
(+209 files in other folders)
